Merge branch 'apps-6947' into 'main'
APPS-6947 AND - 2D Graphics: Action buttons

See merge request ggb/geogebra!9732

GitOrigin-RevId: 74a000ff2a7976e10c6f7ea39120f9ee035e7bef